managing organization section collapse via jquery/css to retain correct 'related' widget heights

--- a/data_manager/static/admin/data_manager/css/layer_form.css
+++ b/data_manager/static/admin/data_manager/css/layer_form.css
@@ -30,3 +30,42 @@
   display: block;
   margin: 30px auto;
 }
+
+/*************************************
+ *    Collapse animation support
+ ************************************/
+/* fieldset.late-transition.collapse table,
+fieldset.late-transition.collapse input,
+fieldset.late-transition.collapse div { */
+fieldset.late-transition.collapse * {
+  max-height: 1000px;
+  transition: max-height 0.5s, padding-top 0.5s, padding-bottom 0.5s;
+}
+fieldset.late-transition.collapse *:not(.related-widget-wrapper):not(.related-widget-wrapper *) {
+  height: auto;
+}
+
+fieldset.late-transition.collapse h2 {
+  transition: background 0.5s;
+}
+
+/* fieldset.late-transition.collapse.collapsed table,
+fieldset.late-transition.collapse.collapsed input,
+fieldset.late-transition.collapse.collapsed div { */
+fieldset.late-transition.collapse.collapsed * {
+  max-height: 0;
+  display: block;
+  padding: 0;
+  border: none;
+}
+
+fieldset.late-transition.collapse h2,
+fieldset.late-transition.collapse.collapsed h2 {
+  max-height: 31px;
+  padding: 4px;
+  display: flex;
+}
+
+a.collapse-toggle {
+  display: inline;
+}
